--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-REDIRECT_URL=google.com
+REDIRECT_URL=https://github.com/nalaso/express-mongo-jwt-bcrypt
 SECRETKEY=secret
 MONGODB_URL=mongodb://localhost:27017
-```
