--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nalaso-express",
   "version": "1.0.2",
-  "bin":"cli.js",
+  "bin": "cli.js",
   "scripts": {
     "start": "nodemon ./bin/www"
   },
@@ -14,6 +14,7 @@
     "express": "~4.16.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1"
   }
 }
